k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verification
  namespace: verification
  labels:
    name: verification
