k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automatic-verification
  namespace: verification
  labels:
    app.kubernetes.io/name: automatic-verification
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: automatic-verification
  template:
    metadata:
      labels:
        app.kubernetes.io/name: automatic-verification
    spec:
      containers:
        - name: automatic-verification
          image: evgendas/automatic-verification:1.0.2
          ports:
            - containerPort: 8092
