k8s/pg-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg
  namespace: verification
  labels:
    app.kubernetes.io/name: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pg
    spec:
      containers:
        - name: pg
          image: postgres:16
          ports:
            - containerPort: 5432
              name: pg
          volumeMounts:
            - name: data
              mountPath: /evgendas/postgresql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
