k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: verification
  labels:
    app.kubernetes.io/name: minio
spec:
  selector:
    app.kubernetes.io/name: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: minio
