k8s/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg
  namespace: verification
  labels:
    app.kubernetes.io/name: pg
spec:
  selector:
    app.kubernetes.io/name: pg
  ports:
    - port: 5432
      targetPort: pg
      protocol: TCP
      name: pg
