k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: verification
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      name: redis
