k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automatic-verification
  namespace: verification
  annotations:
#    nginx.ingress.kubernetes.io/enable-cors: "true"
#  nginx.ingress.kubernetes.io/affinity: "cookie"
#  nginx.ingress.kubernetes.io/session-cookie-name: "route"
#  nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: automatic-verification
                port:
                  number: 80
